--- a/implementation1.ipynb
+++ b/implementation1.ipynb
@@ -8,10 +8,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import statistics\n",
@@ -28,10 +26,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "from pixell import enmap,utils\n",
@@ -50,21 +46,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Map shape and dtype (same for all the maps):\n",
-      "(1, 2182, 9455) float64\n",
-      "Flattened map:\n",
-      "-139.8128566121759\n"
-     ]
-    }
-   ],
    "source": [
     "filename1 = \"/moto/hill/projects/actpol/SO_Sims_LAMBDA/d56/SO_skymaps_deep56/so_skymap_deep56_30GHz.fits\"\n",
     "filename2 = \"/moto/hill/projects/actpol/SO_Sims_LAMBDA/d56/SO_skymaps_deep56/so_skymap_deep56_44GHz.fits\"\n",
@@ -97,7 +80,7 @@
     "fmap353 = np.ndarray.flatten(imap353)\n",
     "\n",
     "print(\"Flattened map:\")\n",
-    "print(fmap44[20630809])"
+    "print(fmap44)"
    ]
   },
   {
@@ -108,40 +91,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-94ee3828e217>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_pix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mdelta_t\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmap_array\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/envs/myenv/lib/python3.8/site-packages/pixell/enmap.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, sel)\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m                 \u001b[0;31m# Split sel into normal and wcs parts.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m                 \u001b[0msel1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msel2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit_slice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m                 \u001b[0;31m# If any wcs-associated indices are None, then we don't know how to update the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0;31m# wcs, and assume the user knows what it's doing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/envs/myenv/lib/python3.8/site-packages/pixell/utils.py\u001b[0m in \u001b[0;36msplit_slice\u001b[0;34m(sel, ndims)\u001b[0m\n\u001b[1;32m   2028\u001b[0m                 \u001b[0mnfree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndims\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2029\u001b[0m                 \u001b[0msel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleft\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mslice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnfree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2030\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0msplit_slice_simple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mndims\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2031\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2032\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msplit_slice_simple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mndims\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/envs/myenv/lib/python3.8/site-packages/pixell/utils.py\u001b[0m in \u001b[0;36msplit_slice_simple\u001b[0;34m(sel, ndims)\u001b[0m\n\u001b[1;32m   2035\u001b[0m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mndims\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2036\u001b[0m         \u001b[0mnotNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2037\u001b[0;31m         \u001b[0msubs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcumsplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mndims\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2038\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2039\u001b[0m                 \u001b[0mr\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msubs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msubs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
    "source": [
     "n_map = 8\n",
     "n_pix = 2182*9455\n",
-    "map_array = [fmap30,fmap44,fmap70,fmap100,fmap143,fmap145,fmap217,fmap353]\n",
-    "\n",
-    "delta_t = np.zeros((n_map,n_pix))\n",
-    "sum_delt = np.zeros((n_map))\n",
-    "\n",
-    "for i in range(n_map):\n",
-    "    for j in range(n_pix):\n",
-    "        delta_t[i][j] = (map_array[i])[j]\n",
-    "\n",
-    "for i in range(n_map):\n",
-    "    sum_delt[i] = sum(delta_t[i,:])"
+    "map_array = [fmap30,fmap44,fmap70,fmap100,fmap143,fmap145,fmap217,fmap353]"
    ]
   },
   {
@@ -152,42 +107,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "r = np.zeros([n_map,n_map])\n",
     "\n",
     "for i in range(n_map):\n",
     "    for j in range(n_map):\n",
-    "        r[i][j] = (sum_delt[i] * sum_delt[j]) / n_pix"
+    "        r[i][j] = np.sum((map_array[i] * map_array[j])) / n_pix\n",
+    "        \n",
+    "print(r)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2c043b351a50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn_map\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_map\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_map\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_maps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_maps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_maps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
    "source": [
     "b = np.zeros([n_map,n_map,n_map])\n",
     "\n",
-    "for i in range(n_maps):\n",
-    "    for j in range(n_maps):\n",
-    "        for k in range(n_maps):\n",
-    "            b[i][j][k] = (sum_delt[i] * sum_delt[j] * sum_delt[k]) / n_pix"
+    "for i in range(n_map):\n",
+    "    for j in range(n_map):\n",
+    "        for k in range(n_map):\n",
+    "            b[i][j][k] = np.sum(map_array[i] * map_array[j] * map_array[k]) / n_pix\n",
+    "            \n",
+    "print(b)"
    ]
   },
   {
@@ -198,12 +141,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "w0 = np.array([.35,.45,.2])\n",
+    "w0 = np.array([.125,.125,.125,.125,.125,.125,.125,.125])\n",
     "a = np.ones(len(w0))\n",
     "\n",
     "#defines a lambda function that returns dot product of weights and array of ones\n",
@@ -223,6 +164,7 @@
     "\n",
     "#minimization method ()\n",
     "mini = minimize(var,w0,method='SLSQP',constraints=con)\n",
+    "weights_var = mini.x\n",
     "print(mini.x)\n",
     "\n",
     "print()\n",
@@ -240,12 +182,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "w0 = np.array([.35,.45,.2])\n",
+    "w0 = np.array([.125,.125,.125,.125,.125,.125,.125,.125])\n",
     "a = np.ones(len(w0))\n",
     "\n",
     "#defines a lambda function that returns dot product of weights and array of ones\n",
@@ -266,6 +206,7 @@
     "\n",
     "#minimization method ()\n",
     "mini = minimize(skew,w0,method='SLSQP',constraints=con)\n",
+    "weights_skew = mini.x\n",
     "\n",
     "print()\n",
     "print(\"The solution array for the weights is:\")\n",
@@ -277,6 +218,101 @@
     "print()\n",
     "print(\"The sum of the weights in the solution array is:\")\n",
     "print(fun(mini.x))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "imap_array = np.array([imap30,imap44,imap70,imap100,imap143,imap145,imap217,imap353])\n",
+    "\n",
+    "#yp_var = np.tensordot(weights_var,imap_array, axes=0)\n",
+    "#yp_skew = np.tensordot(weights_skew, imap_array, axes=0)\n",
+    "\n",
+    "yp_var = imap30.copy()\n",
+    "yp_var *= 0.\n",
+    "\n",
+    "for i in range(n_map):\n",
+    "    yp_var += imap_array[i]*weights_var[i]\n",
+    "    \n",
+    "print(yp_var)\n",
+    "\n",
+    "yp_skew = imap30.copy()\n",
+    "yp_skew *= 0\n",
+    "\n",
+    "for i in range(n_map):\n",
+    "    yp_skew += imap_array[i]*weights_skew[i]\n",
+    "\n",
+    "print(yp_skew)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "plots = enplot.plot(yp_var, range=300,mask=0)\n",
+    "\n",
+    "def eshow(x,**kwargs): enplot.show(enplot.plot(x,**kwargs))\n",
+    "eshow(yp_var)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "plots = enplot.plot(yp_skew, range=300,mask=0)\n",
+    "\n",
+    "def eshow(x,**kwargs): enplot.show(enplot.plot(x,**kwargs))\n",
+    "eshow(yp_skew)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "plots = enplot.plot(yp_var-yp_skew, range=300,mask=0)\n",
+    "\n",
+    "def eshow(x,**kwargs): enplot.show(enplot.plot(x,**kwargs))\n",
+    "eshow(yp_var-yp_skew)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison of the Variance and Skewness"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "freq = np.array([30,44,70,100,143,145,217,353])\n",
+    "\n",
+    "diff = weights_var - (weights_skew / 10)\n",
+    "plt.plot(freq, abs(diff))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot of the Sets of Weights"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "freq = np.array([30,44,70,100,143,145,217,353])\n",
+    "\n",
+    "plot = plt.plot(freq, weights_var,'b-',freq,weights_skew/10,'r')\n",
+    "plt.xlabel('Frequency')\n",
+    "plt.ylabel('Variance and Skewness')\n",
+    "plt.legend(['Variance','Skewness / 10'])\n",
+    "plt.show()\n",
+    "print(\"Note that the skewness weights are reduced to a tenth of their original value to better compare to the variance weights.\")"
    ]
   }
  ],
@@ -296,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
